adding html for hero section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+		<a href="#"><img src="img/logo.svg"/></a>
+		<button><a href="#">Try It Free</a></button>
+	</header>
+
+    <section class="hero">
+		<div class="background-image" style="background-image: url(img/bg-hero-desktop.svg);"></div>
+
+        <div class="hero-left">
+		    <h1>Build The Community Your Fans Will Love</h1>
+		    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussions.</p>
+		    <button><a href="#" class="btn">Get Started For Free</a></button>
+        </div>
+
+        <div class="hero-right">
+            <img src="img/illustration-mockups.svg"/>
+        </div>
+	</section>
 </body>
 </html>
