--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header>
-		<a href="#"><img src="img/logo.svg"/></a>
+		<a href="#"><img src="img/logo.svg" alt="huddle logo image"/></a>
 		<button><a href="#">Try It Free</a></button>
 	</header>
 
     <section class="hero">
-		<div class="background-image" style="background-image: url(img/bg-hero-desktop.svg);"></div>
+		<div class="background-image" style="background-image: url(img/bg-hero-desktop.svg);" alt="hero background image"></div>
 
         <div class="hero-left">
 		    <h1>Build The Community Your Fans Will Love</h1>
@@ -25,8 +25,83 @@
         </div>
 
         <div class="hero-right">
-            <img src="img/illustration-mockups.svg"/>
+            <img src="img/illustration-mockups.svg" alt="illustration image of platform mockups"/>
         </div>
 	</section>
+
+    <main>
+        <section class="benefit">
+            <div>
+                <h3 class="title">Grow Together</h3>
+                <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss ouy on with a feedback form.</p>
+            </div>
+            <div>
+                <img src="img/illustration-grow-together.svg" alt="illustration image to two persons analysing growth"/>
+            </div>
+        </section>
+        <section class="benefit">
+            <div>
+                <img src="img/illustration-flowing-conversation.svg" alt="illustration image of people having a conversation"/>
+            </div>
+            <div>
+                <h3 class="title">Flowing Conversations</h3>
+                <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+            </div>
+        </section>
+        <section class="benefit">
+            <div>
+                <h3 class="title">Your Users</h3>
+                <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+            </div>
+            <div>
+                <img src="img/illustration-your-users.svg" alt="illustration image of users"/>
+            </div>
+        </section>
+    </main>
+    <article>
+        <h2>Ready To Build Your Community?</h2>
+        <button><a href="#" class="btn">Get Started For Free</a></button>
+    </article>
+    <footer>
+        <section>
+        <div>
+            <img src="" alt="">
+            <div>
+                <i></i>
+                <span></span>
+            </div>
+            <div>
+                <i></i>
+                <span></span>
+            </div>
+            <div>
+                <i></i>
+                <span></span>
+            </div>
+        </div>
+        <div>
+            <ul>
+            <li><a href="#">About Us</a></li>
+			<li><a href="#">What We Do</a></li>
+			<li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+            <li><a href="#">Career</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div>
+            <i></i>
+            <i></i>
+            <i></i>
+        </div>
+    </section>
+    <section>
+        <p><small>&copy;Copyright 2018 Huddle. All rights reserved.</small></p>
+    </section>
+    </footer>
 </body>
 </html>
