completing html edits

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -65,18 +66,18 @@
     <footer>
         <section>
         <div>
-            <img src="" alt="">
+            <h1>Huddle</h1>
             <div>
-                <i></i>
-                <span></span>
+                <img src="img/icon-location.svg" alt="location icon">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eligendi! Hic delectus optio distinctio perspiciatis.</span>
             </div>
             <div>
-                <i></i>
-                <span></span>
+                <img src="img/icon-phone.svg" alt="phone icon">
+                <span>+1-543-123-4567</span>
             </div>
             <div>
-                <i></i>
-                <span></span>
+                <img src="img/icon-email.svg" alt="email icon">
+                <span>example@huddle.com</span>
             </div>
         </div>
         <div>
@@ -94,9 +95,9 @@
             </ul>
         </div>
         <div>
-            <i></i>
-            <i></i>
-            <i></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
         </div>
     </section>
     <section>
