adding styles to the header

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <title>Huddle</title>
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-		<a href="#"><img src="img/logo.svg" alt="huddle logo image"/></a>
-		<button><a href="#">Try It Free</a></button>
-	</header>
+        <section>
+            <a href="#"><img src="img/logo.svg" alt="huddle logo image"/></a>
+            <button><a href="#">Try It Free</a></button>
+        </section>
 
-    <section class="hero">
-		<div class="background-image" style="background-image: url(img/bg-hero-desktop.svg);" alt="hero background image"></div>
+        <section class="hero">
 
-        <div class="hero-left">
-		    <h1>Build The Community Your Fans Will Love</h1>
-		    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussions.</p>
-		    <button><a href="#" class="btn">Get Started For Free</a></button>
-        </div>
+            <div class="hero-left">
+                <h1>Build The Community Your Fans Will Love</h1>
+                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussions.</p>
+                <button class="btn"><a href="#">Get Started For Free</a></button>
+            </div>
 
-        <div class="hero-right">
-            <img src="img/illustration-mockups.svg" alt="illustration image of platform mockups"/>
-        </div>
-	</section>
-
+            <div class="hero-right">
+                <img src="img/illustration-mockups.svg" alt="illustration image of platform mockups"/>
+            </div>
+        </section>
+    </header>
     <main>
         <section class="benefit">
             <div>
@@ -66,7 +66,7 @@
     <footer>
         <section>
         <div>
-            <h1>Huddle</h1>
+            <img src="img/logo-white.svg" alt="huddle logo in white">
             <div>
                 <img src="img/icon-location.svg" alt="location icon">
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eligendi! Hic delectus optio distinctio perspiciatis.</span>
