--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
         </section>
     </header>
     <main>
-        <section class="benefit">
-            <div>
+        <section class="benefit flip">
+            <div class="text">
                 <h3 class="title">Grow Together</h3>
                 <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss ouy on with a feedback form.</p>
             </div>
-            <div>
+            <div class="image">
                 <img src="img/illustration-grow-together.svg" alt="illustration image to two persons analysing growth"/>
             </div>
         </section>
         <section class="benefit">
-            <div>
+            <div class="image">
                 <img src="img/illustration-flowing-conversation.svg" alt="illustration image of people having a conversation"/>
             </div>
-            <div>
+            <div class="text">
                 <h3 class="title">Flowing Conversations</h3>
                 <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
             </div>
         </section>
-        <section class="benefit">
-            <div>
+        <section class="benefit flip">
+            <div class="text">
                 <h3 class="title">Your Users</h3>
                 <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
             </div>
-            <div>
+            <div class="image">
                 <img src="img/illustration-your-users.svg" alt="illustration image of users"/>
             </div>
         </section>
