article styling added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
         <section class="benefit flip">
             <div class="text">
-                <h3 class="title">Grow Together</h3>
+                <h2 class="title">Grow Together</h2>
                 <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss ouy on with a feedback form.</p>
             </div>
             <div class="image">
@@ -45,13 +45,13 @@
                 <img src="img/illustration-flowing-conversation.svg" alt="illustration image of people having a conversation"/>
             </div>
             <div class="text">
-                <h3 class="title">Flowing Conversations</h3>
+                <h2 class="title">Flowing Conversations</h2>
                 <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
             </div>
         </section>
         <section class="benefit flip">
             <div class="text">
-                <h3 class="title">Your Users</h3>
+                <h2 class="title">Your Users</h2>
                 <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
             </div>
             <div class="image">
@@ -60,8 +60,10 @@
         </section>
     </main>
     <article>
+        <div>
         <h2>Ready To Build Your Community?</h2>
-        <button><a href="#" class="btn">Get Started For Free</a></button>
+        <button class="btn"><a href="#">Get Started For Free</a></button>
+        </div>
     </article>
     <footer>
         <section>
