styling and adding queries to footer

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
         </div>
     </article>
     <footer>
+        <img src="img/logo-white.svg" alt="huddle logo in white">
+
         <section>
-        <div>
-            <img src="img/logo-white.svg" alt="huddle logo in white">
+        <div class="footer-top">
             <div>
                 <img src="img/icon-location.svg" alt="location icon">
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, eligendi! Hic delectus optio distinctio perspiciatis.</span>
@@ -96,13 +97,13 @@
 			<li><a href="#">Contact Us</a></li>
             </ul>
         </div>
-        <div>
+        <div class="icons">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
         </div>
     </section>
-    <section>
+    <section class="copy">
         <p><small>&copy;Copyright 2018 Huddle. All rights reserved.</small></p>
     </section>
     </footer>
